src/main/java/com/example/integradora5d/error/errorTypes/CustomBadRequestException.java
package com.example.integradora5d.error.errorTypes;

public class CustomBadRequestException extends RuntimeException {
    public CustomBadRequestException(String message) {
        super(message);
    }
}
